"Fixed alignment"

--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -230,8 +230,8 @@ code {
 .linkedinlogo {
   position: relative;
   width: 86.5%;
-  top: 28%;
-  right: 0%;
+  top: 26%;
+  right: 0.2%;
   grid-row: 2;
 }
 
